<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/extras_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/extras" />

    <!-- email -->
    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/extra_email_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/extra_email" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/extra_email_in_array_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:enabled="false"
        android:text="@string/in_string_array" />

    <!--CC -->
    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/extra_cc_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/extra_cc" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/extra_cc_in_array_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:enabled="false"
        android:text="@string/in_string_array" />

    <!--BCC -->
    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/extra_bcc_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/extra_bcc" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/extra_bcc_in_array_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:enabled="false"
        android:text="@string/in_string_array" />

    <!-- subject -->
    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/extra_subject_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/extra_subject" />

    <!-- text-->
    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/extra_text_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/extra_text" />

    <!-- stream -->
    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/extra_stream_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/extra_stream" />

</merge>