<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/options_scrollview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/action_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/none_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/none" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/action_send_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_send" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/action_send_to_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_sendto" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/action_send_multiple_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_send_multiple" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/type_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_or_data" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="@string/type_data_message"
                android:textStyle="italic" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/none_type_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/none" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/type_text_plain_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type_text_plain" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/type_asterisk_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type_asktersik" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/data_mailto_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/data_mail_to" />

        </RadioGroup>

        <include
            android:id="@+id/extras_layout"
            layout="@layout/extras_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>